LIB-347 Apply reduced wrapped line whitespace to correct navbar element

--- a/src/scss/custom/_header.scss
+++ b/src/scss/custom/_header.scss
@@ -144,6 +144,9 @@
       .navbar-nav {
         a {
           @include css3-prefix(transition, all .15s ease-out);
+        }
+
+        button {
           line-height: 1.4;
         }
 
